# storage/api-docs/api-docs.json
@@ -31,10 +31,40 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
+                                    "post_author": {
+                                        "type": "integer"
+                                    },
+                                    "post_content": {
+                                        "type": "string"
+                                    },
                                     "post_title": {
                                         "type": "string"
                                     },
-                                    "post_content": {
+                                    "post_excerpt": {
+                                        "type": "string"
+                                    },
+                                    "post_status": {
+                                        "type": "string"
+                                    },
+                                    "post_type": {
+                                        "type": "string"
+                                    },
+                                    "post_mime_type": {
+                                        "type": "string"
+                                    },
+                                    "post_guid": {
+                                        "type": "string"
+                                    },
+                                    "post_img": {
+                                        "type": "string"
+                                    },
+                                    "job_salary": {
+                                        "type": "string"
+                                    },
+                                    "job_place": {
+                                        "type": "string"
+                                    },
+                                    "post_tags": {
                                         "type": "string"
                                     }
                                 },
